# aind-metadata-mapper

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  acquisition.json  contributing.md  output.json  protocols.yaml  pyproject.toml  test_smartspim_mapper.py
.github/: copilot-instructions.md
.github/workflows/: integration_test.yml  publish_main.yml  publish_v1.yml  run_dev_tests.yml  run_integration_test_dev.yml  run_main_tests.yml  test_and_lint.yml
docs/source/: Contributing.rst  UserGuide.rst  conf.py  index.rst
examples/: Pavlovian-Fiber-session-template_428.json  README.md  acquisition.json  combined_session_params.json  create_fiber_photometry_session.py  example_acquisition.json  example_fip_acquisition.json  example_fip_mapper.py  fiber_photometry_data_streams.json  fiber_photometry_session_params.json  fip_example_acquisition.json  fip_example_map.py  job_settings_fiber_photometry.json  job_settings_pav_fiber.json  pavlovian_behavior_session_params.json
scripts/: download_fiber_behavior_data.py  example_create_fiber_and_pav_sessions.py  example_fip_mapper.py  fiber+pavlovian_session_build.py  fiber_photometry_session_build.py  fiber_plus_pavlovian_session_build.py  fiber_session_build.py  integration_test.py  pavlovian_session_build.py  session_build.py
temp/: work_description.md
tests/: test_FIB.py  test_base.py  test_bergamo.py  test_ephys.py  test_fib.py  test_fip_mapper.py  test_gather_metadata.py  test_gather_metadata_registry.py  test_gather_processing_job.py  test_instrument_store.py  test_integration_metadata.py  test_legacy_core.py  test_mesoscope.py  test_models.py  test_procedures.py  test_smartspim.py  test_smartspim_utils.py  test_subject.py  test_u19_etl.py  test_utils.py
(+230 files in other folders)
