[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-metadata-mapper"
description = "Package to manage mapping of source data into aind-data-schema metadata files."
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "requests",
    "aind-data-schema>=2.0.5",
    "pydantic-settings>=2.8.0",
    "aind-metadata-extractor>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "interrogate",
    "isort",
    "pre-commit"
]

doc = [
    "Sphinx<6.0",
    "furo"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "aind_metadata_mapper.__version__"}

[tool.black]
line-length = 120
target_version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["src/aind_metadata_mapper/fip"]

[tool.coverage.run]
omit = ["*__init__*", "tests/integration/*", "*make_instrument.py"]
source = ["aind_metadata_mapper", "tests"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "from",
    "import",
    "pragma: no cover"
]
fail_under = 100

[tool.isort]
line_length = 120
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build", "env"]
fail-under = 100
